tests/NormalTests/paczka1/fuzzy1/71366771.err
Error in line 5: Gzpkrr9O2IR A210 36,32
Error in line 7: Gzpkrr9O2IR S90 12,0
Error in line 16: Gzpkrr9O2IR S9 97,
Error in line 10: RIl A845 71,1
Error in line 19: RIl S90 79,2
Error in line 23: 1b9Uz8HrdIX A210 72,4
Error in line 8: Gzpkrr9O2IR A483 47,6
Error in line 35: BXrdSbuAv6V S90 90,7
Error in line 32: VfWt8 A483 47,8
